espocrm-daemon-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: espocrm-daemon
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: espocrm-daemon
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: espocrm-daemon
    spec:
      containers:
        - command:
            - docker-daemon.sh
          image: espocrm/espocrm
          name: espocrm-daemon
          resources: {}
          volumeMounts:
            - mountPath: /var/www/html
              name: espocrm
      restartPolicy: Always
      volumes:
        - name: espocrm
          persistentVolumeClaim:
            claimName: espocrm
status: {}
