espocrm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: espocrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: espocrm
  template:
    metadata:
      labels:
        app: espocrm
    spec:
      containers:
      - name: espocrm
        image: espocrm/espocrm
        volumeMounts:
        - mountPath: /var/www/html
          name: espocrm
        ports:
        - containerPort: 80
      volumes:
      - name: espocrm
        persistentVolumeClaim:
          claimName: espocrm
---
apiVersion: v1
kind: Service
metadata:
  name: espocrm
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: espocrm
