mysql-wrong-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: db-espocrm.mysql.database.azure.com
