app6-deployment.yaml
# Espocrm app deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: espocrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: espocrm
  template:
    metadata:
      labels:
        app: espocrm
    spec:
      containers:
      - name: espocrm
        image: espocrm/espocrm
        volumeMounts:
        - mountPath: /var/www/html
          name: espocrm
        - name: ca-pemstore
          mountPath: "/etc/pre-install/DigiCertGlobalRootCA.crt.pem"
          subPath: DigiCertGlobalRootCA.crt.pem
          readOnly: false
        - name: config-internal
          mountPath: "/var/www/html/data/config-internal.php"
          subPath: config-internal.php
        ports:
        - containerPort: 80
      volumes:
      - name: espocrm
        persistentVolumeClaim:
          claimName: espocrm
      - name: ca-pemstore
        configMap:
          name: ca-pemstore
          defaultMode: 0777
      - name: config-internal
        configMap:
          name: config-internal
          items:
          - key: "config-internal.php"
            path: "config-internal.php"
      - name: pre-install
        emptyDir: {}
          

# Espocrm app service
---
apiVersion: v1
kind: Service
metadata:
  name: espocrm
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: espocrm

# Deamon deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: espocrm-daemon
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: espocrm-daemon
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: espocrm-daemon
    spec:
      containers:
        - command:
            - docker-daemon.sh
          image: espocrm/espocrm
          name: espocrm-daemon
          resources: {}
          volumeMounts:
            - mountPath: /var/www/html
              name: espocrm
      restartPolicy: Always
      volumes:
        - name: espocrm
          persistentVolumeClaim:
            claimName: espocrm
status: {}

# Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: espocrm-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: app6.testblobstorage.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: espocrm
            port:
              number: 80
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: espocrm-websocket
            port:
              number: 8081

# Persistent volume
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: espocrm-websocket
  name: espocrm-websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: espocrm-websocket
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: espocrm-websocket
    spec:
      containers:
        - command:
            - docker-websocket.sh
          image: espocrm/espocrm
          name: espocrm-websocket
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /var/www/html
              name: espocrm
      restartPolicy: Always
      volumes:
        - name: espocrm
          persistentVolumeClaim:
            claimName: espocrm
status: {}

# Websocket service
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: espocrm-websocket
  name: espocrm-websocket
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8080
  selector:
    io.kompose.service: espocrm-websocket
status:
  loadBalancer: {}

# External name for the database (not sure if needed)
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: espocrm-mysql.mysql.database.azure.com
