internal-mysql-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: espocrm
  namespace: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: espocrm
  template:
    metadata:
      labels:
        app: espocrm
    spec:
      containers:
      - name: espocrm
        image: espocrm/espocrm
        volumeMounts:
        - mountPath: /var/www/html
          name: espocrm
        ports:
        - containerPort: 80
      volumes:
      - name: espocrm
        persistentVolumeClaim:
          claimName: espocrm
---
apiVersion: v1
kind: Service
metadata:
  name: espocrm
  namespace: app1
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: espocrm

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: espocrm-daemon
  namespace: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: espocrm-daemon
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: espocrm-daemon
    spec:
      containers:
        - command:
            - docker-daemon.sh
          image: espocrm/espocrm
          name: espocrm-daemon
          resources: {}
          volumeMounts:
            - mountPath: /var/www/html
              name: espocrm
      restartPolicy: Always
      volumes:
        - name: espocrm
          persistentVolumeClaim:
            claimName: espocrm
status: {}

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: espocrm-ingress-app1
  namespace: app1
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    # nginx.ingress.kubernetes.io/server-snippets: |
    #   location /app1 {
    #   proxy_set_header Upgrade $http_upgrade;
    #   proxy_http_version 1.1;
    #   proxy_set_header X-Forwarded-Host $http_host;
    #   proxy_set_header X-Forwarded-Proto $scheme;
    #   proxy_set_header X-Forwarded-For $remote_addr;
    #   proxy_set_header Host $host;
    #   proxy_set_header Connection "upgrade";
    #   proxy_cache_bypass $http_upgrade;
    #   }
spec:
  ingressClassName: nginx
  rules:
  - host: app2.testblobstorage.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: espocrm
            port:
              number: 80
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: espocrm-websocket
            port:
              number: 8081

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: espocrm-websocket
  name: espocrm-websocket
  namespace: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: espocrm-websocket
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: espocrm-websocket
    spec:
      containers:
        - command:
            - docker-websocket.sh
          image: espocrm/espocrm
          name: espocrm-websocket
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /var/www/html
              name: espocrm
      restartPolicy: Always
      volumes:
        - name: espocrm
          persistentVolumeClaim:
            claimName: espocrm
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: espocrm-websocket
  name: espocrm-websocket
  namespace: app1
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8080
  selector:
    io.kompose.service: espocrm-websocket
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mysql
  name: mysql
  namespace: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: mysql
    spec:
      containers:
        - args:
            - --default-authentication-plugin=mysql_native_password
          image: mysql:8
          name: mysql
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql
      restartPolicy: Always
      volumes:
        - name: mysql
          persistentVolumeClaim:
            claimName: mysql
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: mysql
  name: mysql
  namespace: app1
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: mysql
status:
  loadBalancer: {}
